--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="today_schedule">Today\'s Schedule</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
