add navigation menu item: support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="drawer_image">Drawer Image</string>
+    <string name="support">Support</string>
 </resources>
