--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="room">Room:</string>
     <string name="course_name"> </string>
     <string name="faculty_name">Nothing for Now</string>
+    <string name="off_day">It\'s Off day!</string>
     <string name="lecture_room"> </string>
     <string name="lecture_duration"> </string>
 </resources>
