improve LocalDataManager class this class now converts object to json string and save as text file and vice-versa for storing and getting LocalScheduleData object

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="batch">Batch:</string>
     <string name="semester">Semester:</string>
     <string name="last_updated">Last Updated:</string>
+    <string name="setup_message">Setting up your schedule…</string>
+    <string name="success_message">Successful!\nPlease restart app</string>
+    <string name="exit">Exit</string>
 </resources>
